--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sorteador</title>
 </head>
 <body>
-    
+    here i'm goin sortear um numero
 <script src="./script.js"></script>
 </body>
 </html>
