--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <title>Sorteador</title>
 </head>
 <body>
-    here i'm goin sortear um numero
+
+<header>
+
+<div id="cabecalho">
+
+   <h1>Sorteador</h1>
+    
+</div>
+
+
+</header>
+
+
+
+    
 <script src="./script.js"></script>
 </body>
 </html>
